feat: expose current user API
